cmake_minimum_required(VERSION 3.8)
project(projekt_siwr)

if(CMAKE_COMPILER_IS_GNUCXX OR CMAKE_CXX_COMPILER_ID MATCHES "Clang")
  add_compile_options(-Wall -Wextra -Wpedantic)
endif()

# find dependencies
find_package(ament_cmake REQUIRED)
find_package(ament_cmake_python REQUIRED)
find_package(rclcpp REQUIRED)
find_package(rclpy REQUIRED)

ament_python_install_package(${PROJECT_NAME})

# Copy world, config and model to project directory
install(
  DIRECTORY worlds config models
  DESTINATION share/${PROJECT_NAME}
)

# Python scripts
install(
  PROGRAMS scripts/localiser.py
  DESTINATION lib/${PROJECT_NAME}
)

# Launch scripts
install(
  PROGRAMS launch/projekt_siwr.launch.py launch/turtlebot3_spawn.launch.py
  DESTINATION share/${PROJECT_NAME}
)

if(BUILD_TESTING)
  find_package(ament_lint_auto REQUIRED)
  # the following line skips the linter which checks for copyrights
  # comment the line when a copyright and license is added to all source files
  set(ament_cmake_copyright_FOUND TRUE)
  # the following line skips cpplint (only works in a git repo)
  # comment the line when this package is in a git repo and when
  # a copyright and license is added to all source files
  set(ament_cmake_cpplint_FOUND TRUE)
  ament_lint_auto_find_test_dependencies()
endif()

ament_package()
